PARTNERS: Fixed the stretched TUDortmund logo

--- a/public/styles/partners.css
+++ b/public/styles/partners.css
@@ -15,7 +15,6 @@
 .partners-logos img{
     min-width: 200px;
     max-width: 30%;
-    height: fit-content;
 }
 
 
